Introduce SegmentTable